# Evict-Bench

./: CMakeLists.txt  README.md
doc/: README.md
doc/2q/: README.md
doc/arc/: README.md
doc/car/: README.md
doc/clock/: README.md
doc/clock-pro/: README.md
doc/dbmin/: README.md
doc/fifo/: README.md
doc/innodb-midpoint-lru/: README.md
doc/lfu/: README.md
doc/lfu-aging/: README.md
doc/lirs/: README.md
doc/lru/: README.md
doc/lru-k/: README.md
doc/mru/: README.md
doc/opt/: README.md
doc/postgres-clock-sweep/: README.md
doc/random/: README.md
doc/tinylfu/: README.md
include/evict-benchmark/: simulator.h
include/evict-benchmark/comman/: type.h
include/evict-benchmark/policy/: 2q.h  arc.h  clock-pro.h  clock.h  evict-policy.h  fifo.h  lfu.h  lru-aging.h  lru-k.h  lru.h  mru.h  random.h
include/evict-benchmark/workload/: workload-type.h  workload.h
src/policy/: arc.cpp  clock-pro.cpp  clock.cpp  fifo.cpp  lfu.cpp  lru-k.cpp  lru.cpp  mru.cpp  random.cpp
src/simulator/: simulator.cpp
src/workloads/: workload.cpp
tests/policy/: lfu_test.cpp  lru_test.cpp  random_test.cpp
